[tool.poetry]
name = "pyztrategic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algebraic-data-types = "^0.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.115.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
